--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.4.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "react-addons-test-utils": "^15.3.0",
     "react-scripts": "^0.9.3"
   },
